# CovalentAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: demo.py
data/: README.md  reactive_residues.json  warheads.json
docker/: Dockerfile  docker-compose.yml
src/covalent_agent/: __init__.py  __main__.py  config.py  schemas.py  supervisor.py
src/covalent_agent/agents/: __init__.py  literature_rag.py  molecule_designer.py  property_predictor.py  reporter.py  target_analyst.py  warhead_selector.py
src/covalent_agent/data/: __init__.py  loaders.py  warhead_library.py
src/covalent_agent/models/: __init__.py  chemprop_wrapper.py  esm_wrapper.py
src/covalent_agent/tools/: __init__.py  chemistry_tools.py  literature_tools.py  protein_tools.py
tests/: conftest.py  test_literature_rag.py  test_main_cli.py  test_molecule_designer.py  test_property_predictor.py  test_reporter.py  test_supervisor.py  test_target_analyst.py  test_tools_chemistry.py  test_tools_literature.py  test_tools_protein.py  test_warhead_selector.py
